<resources>
    <string name="app_name">Fallen Legends</string>
    <string name="textView">Home Screen</string>
    <string name="TermsCond">Terms And Conditions</string>
    <string name="about">About us</string>
    <string name="profile">Profile</string>
    <string name="closeButton">Close</string>
    <string name="loginButton">Login</string>
    <string name="signupButton">Sign Up</string>
    <string name="zoneFragment_zoneName">Zone</string>
    <string name="zoneFragment_zoneOwner">Owner:</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="acceptButton">Accept</string>
    <string name="conquestButton">Conquer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resetPasswordButton">Reset Password</string>
    <string name="deck_title">Deck</string>
    <string name="txt_social_name">Social</string>
    <string name="txt_Logout">Log Out</string>
    <string name="StoreTitle">Store</string>
    <string name="NotImplemented">This section is not implemented yet, soon will be available!</string>
    <string name="manageButton">Manage</string>
    <string name="txt_name">Name</string>
    <string name="txt_position">Position</string>
    <string name="txt_score">Score</string>
    <string name="creatureCaptured">Creature Captured!</string>
    <string name="creatureTooFarAway">Creature too far away!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>