<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CurrentZone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:elevation="2dp">

        <TextView
            android:id="@+id/txt_zone_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top|center"
            android:text="@string/zoneFragment_zoneName"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/txt_zone_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top|center"
            android:text="@string/zoneFragment_zoneOwner"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top|center"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nisl eget ultricies lacinia, nisl nisl aliquet nisl, eget aliquet nisl nisl sit amet nisl."
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom|center"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:elevation="20dp">

            <Button
                android:visibility="gone"
                android:id="@+id/manageButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:elevation="20dp"
                android:text="@string/manageButton"/>

            <Button
                android:visibility="visible"
                android:id="@+id/conquerButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:elevation="20dp"
                android:text="@string/conquestButton"/>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:elevation="20dp"
                android:text="@string/closeButton"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/test_shape" />

</FrameLayout>